--- a/styles.css
+++ b/styles.css
@@ -2,54 +2,59 @@
 
 
 
-:root{
-    --primary-color:#7C3AED;
+:root {
+    --primary-color: #7C3AED;
+    --offwhite-color: #F3F4F6;
+    --dark-gray: #6B7280;
 }
 
 
 
-body{
+body {
     font-family: 'Montserrat', sans-serif;
-
+    margin: 0px;
 }
 
-hr{
+hr {
     margin: 2rem 0rem;
 }
+
 /** container **/
 .container {
     padding: 0rem 1rem;
 
 }
 
-.container-center{
+.container-center {
     max-width: 600px;
     margin: auto;
 }
 
 /** links **/
-.link{
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem
 }
-.link-primary{
+
+.link-primary {
     background-color: var(--primary-color);
-border-radius: 0.5rem;
-color:white;
+    border-radius: 0.5rem;
+    color: white;
 }
-.link-secondary{
+
+.link-secondary {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var (--primary-color);
 }
 
 /** list **/
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
 }
 
 .list-item-inline {
-    display:inline;
+    display: inline;
     padding: 0rem 0.5rem;
 }
 
@@ -65,16 +70,59 @@ color:white;
     font-weight: bold;
 }
 
-.navigation .nav-pills{
+.navigation .nav-pills {
     text-align: right;
 }
 
 
 
 .navigation .link {
- color: white;
- 
+    color: white;
+
 }
+
 .navigation .link-active {
     font-weight: bold;
+}
+
+.hero {
+    padding: 2rem;
+
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+
+}
+
+.hero .hero-heading {
+    text-align: center;
+    padding: 1rem;
+    color: var(--dark-gray);
+}
+
+.section {
+    padding: 2rem
+}
+
+.section h1 {
+    text-align: center;
+    ;
+}
+
+.ow {
+    background-color: var(--offwhite-color);
+}
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1 rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+.footer .link{
+    color: white;
 }
