--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 
 :root {
-    --primary-color: #7C3AED;
+    --primary-color: #ff9933;
     --offwhite-color: #F3F4F6;
     --dark-gray: #6B7280;
 }
@@ -125,9 +125,17 @@ hr {
 }
 .footer .link{
     color: white;
+    
+    
 }
 
 .footer .footer-header {
     font-weight: bold;
     font-size: large;
+    
+
+}
+
+#dream {
+   text-align: center;
 }
