--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,12 @@ hr {
 }
 
 .link-secondary {
+    max-width: 140px;
+    margin: 1rem;
+    padding: 0.6rem 1.2rem;
+    border-radius: 2rem;
+    border: 1px solid var(--primary-color);
     color: var(--primary-color);
-    border-radius: 0.5rem;
-    border: 1px solid var (--primary-color);
 }
 
 /** list **/
